# E2E

./: .gitignore
Env/: environment.yml  environment_cpuonly.yml  setupEnv.sh
Ops/: CMakeLists.txt  FindTensorFlow.cmake  HistogramMaxSample.cc  HistogramMaxSampleGrad.cc  KDEHistogram.cc  KDEHistogramGrad.cc  Kernels.h  README.md  SymConv1D.py  Utils.h  __init__.py  histogram_max.py  kde_histogram.py  test_ops.py
Test/: testKeras.py
Train/: runE2EStandalone.py  runFastHisto.py  train.py
Train/vtx/: Devices.py  FastHisto.py  InputFiles.py  Pipeline.py  __init__.py
Train/vtx/nn/: E2EMax.py  E2ERef.py  KDELayer.py  __init__.py
